--- a/portfolio.html
+++ b/portfolio.html
@@ -13,27 +13,26 @@
 </head>
 <body>
     <header class="header">
-            <div class="header-conteiner container">
-                    <nav class="header-navigation">
-                        <a href="" class="web">Web<span class="header-web">Studio</span></a>
-                        <ul class="header-navigation-list">
-                            <li><a href="index.html" class="header-nav-item">Студия</a></li>
-                            <li><a href="portfolio.html" class="header-nav-item header-active">Портфолио</a></li>
-                            <li><a href="" class="header-nav-item last">Контакты</a></li>
-                        </ul>
-                    </nav>
-                    <ul class="header-contacts-list">
-                        <li class="header-contact-li"><a href="mailto:info@devstudio.com" class="header-contacts-item"><svg width="16" height="12" viewBox="0 0 16 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M14.5 0H1.50001C0.672854 0 0 0.672853 0 1.50001V10.5C0 11.3271 0.672854 12 1.50001 12H14.5C15.3271 12 16 11.3271 16 10.5V1.50001C16 0.672853 15.3271 0 14.5 0ZM14.5 0.999994C14.5679 0.999994 14.6325 1.01409 14.6916 1.0387L8 6.83838L1.30833 1.0387C1.36742 1.01412 1.43204 0.999994 1.49998 0.999994H14.5ZM14.5 11H1.50001C1.22414 11 0.999996 10.7759 0.999996 10.5V2.09521L7.67236 7.87792C7.76661 7.95944 7.8833 7.99999 8 7.99999C8.1167 7.99999 8.23339 7.95948 8.32764 7.87792L15 2.09521V10.5C15 10.7759 14.7759 11 14.5 11Z" fill="#757575"/>
-                            </svg>
-                            info@devstudio.com</a></li>
-                        <li class="header-contact-li"><a href="tel:+380961111111" class="header-contacts-item"><svg width="10" height="16" viewBox="0 0 10 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M8.5 0H1.5C0.672848 0 0 0.672848 0 1.5V14.5C0 15.3272 0.672848 16 1.5 16H8.5C9.32715 16 10 15.3272 10 14.5V1.5C10 0.672848 9.32715 0 8.5 0ZM1.5 1H8.5C8.77588 1 9 1.22412 9 1.5V12H1V1.5C1 1.22412 1.22412 1 1.5 1ZM8.5 15H1.5C1.22412 15 1 14.7759 1 14.5V13H9V14.5C9 14.7759 8.77588 15 8.5 15Z" fill="#757575"/>
-                            </svg>
-                            +38 096 111 11 11</a></li>
+        <div class="header-conteiner container">
+                <nav class="header-navigation">
+                    <a href="" class="web">Web<span class="header-web">Studio</span></a>
+                    <ul class="header-navigation-list">
+                        <li><a href="index.html" class="header-nav-item">Студия</a></li>
+                        <li><a href="portfolio.html" class="header-nav-item header-active">Портфолио</a></li>
+                        <li><a href="" class="header-nav-item last">Контакты</a></li>
                     </ul>
-            </div>
-    </header>
+                </nav>
+                <ul class="header-contacts-list">
+                    <li class="header-contact-li">
+                        <a href="mailto:info@devstudio.com" class="header-contacts-item"><svg class="header-mail-icon">
+                            <use href="images/icons.svg#icon-header-mail"></use>
+                        </svg>info@devstudio.com</a></li>
+                    <li class="header-contact-li"><a href="tel:+380961111111" class="header-contacts-item"><svg class="header-phone-icon">
+                        <use href="images/icons.svg#icon-headerphone"></use>
+                    </svg>+38 096 111 11 11</a></li>
+                </ul>
+        </div>
+</header>
     <main class="section">
         <div class="container">
             <h1 class="visually-hidden">Portfolio-main</h1>
@@ -112,9 +111,9 @@
         </div>      
     </main>
     <footer>
-        <div class="footer-div">
-            <div class="container">
-                <a href="" class="web">Web<span class="footer-web">Studio</span></a>
+        <div class="footer-container container">
+            <div class="footer-part-first">
+                <a href="" class="web last">Web<span class="footer-web">Studio</span></a>
                 <address class="footer-addrerss">
                     <ul class="footer-list">
                         <li><p class="footer-addrerss-item">г. Киев, пр-т Леси Украинки, 26</p></li>
@@ -123,7 +122,24 @@
                     </ul>
                 </address>
             </div>
-        </div>
-    </footer>   
+            <div class="footer-connection">
+                <h3 class="ftcnt-head">присоединяйтесь</h3>
+                <ul class="ftcnt-list">
+                    <li class="ftcnt-item"><a href="" class="footer-connect">
+                        <svg class="footer-connect-icon"><use href="images/icons.svg#icon-footerinstagram"></use></svg>
+                    </a></li>
+                    <li class="ftcnt-item"><a href="" class="footer-connect">
+                        <svg class="footer-connect-icon"><use href="images/icons.svg#icon-footertwitter"></use></svg>
+                    </a></li>
+                    <li class="ftcnt-item"><a href="" class="footer-connect">
+                        <svg class="footer-connect-icon"><use href="images/icons.svg#icon-footerfacebook"></use></svg>
+                    </a></li>
+                    <li class="ftcnt-item last"><a href="" class="footer-connect">
+                        <svg class="footer-connect-icon"><use href="images/icons.svg#icon-footerlinkedin"></use></svg>
+                    </a></li>
+                </ul>
+            </div>
+        </div>            
+    </footer>
 </body>
 </html>
