--- a/index.html
+++ b/index.html
@@ -259,19 +259,35 @@
             </div>
             <div class="footer-connection">
                 <h3 class="ftcnt-head">присоединяйтесь</h3>
-                <ul class="ftcnt-list">
-                    <li class="ftcnt-item"><a href="" class="footer-connect">
-                        <svg class="footer-connect-icon"><use href="images/icons.svg#icon-footerinstagram"></use></svg>
-                    </a></li>
-                    <li class="ftcnt-item"><a href="" class="footer-connect">
-                        <svg class="footer-connect-icon"><use href="images/icons.svg#icon-footertwitter"></use></svg>
-                    </a></li>
-                    <li class="ftcnt-item"><a href="" class="footer-connect">
-                        <svg class="footer-connect-icon"><use href="images/icons.svg#icon-footerfacebook"></use></svg>
-                    </a></li>
-                    <li class="ftcnt-item last"><a href="" class="footer-connect">
-                        <svg class="footer-connect-icon"><use href="images/icons.svg#icon-footerlinkedin"></use></svg>
-                    </a></li>
+                <ul class="footer-connection-list">
+                    <li class="footer-connection-item">
+                        <a href="https://github.com/yoksel/common-words" class="footer-connect-sending">
+                            <svg class="footer-connect-icon">
+                                <use href="./images/icons.svg#icon-footerinstagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-connection-item">
+                        <a href="" class="footer-connect-sending">
+                            <svg class="footer-connect-icon">
+                                <use href="./images/icons.svg#icon-footertwitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-connection-item">
+                        <a href="" class="footer-connect-sending">
+                            <svg class="footer-connect-icon">
+                                <use href="./images/icons.svg#icon-footerfacebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-connection-item last">
+                        <a href="" class="footer-connect-sending">
+                            <svg class="footer-connect-icon">
+                                <use href="./images/icons.svg#icon-footerlinkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>            
