--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 <h3 class="ftcnt-head">присоединяйтесь</h3>
                 <ul class="footer-connection-list">
                     <li class="footer-connection-item">
-                        <a href="https://github.com/yoksel/common-words" class="footer-connect-sending">
+                        <a href="" class="footer-connect-sending">
                             <svg class="footer-connect-icon">
                                 <use href="./images/icons.svg#icon-footerinstagram"></use>
                             </svg>
