--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 </address>
             </div>
             <div class="footer-connection">
-                <h3 class="ftcnt-head">присоединяйтесь</h3>
+                <p class="ftcnt-head">присоединяйтесь</p>
                 <ul class="footer-connection-list">
                     <li class="footer-connection-item">
                         <a href="" class="footer-connect-sending">
