--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header">
             <div class="header-conteiner container">
                     <nav class="header-navigation">
-                        <a href="" class="web">Web<span class="header-web">Studio</span></a>
+                        <a href="" class="web header-logo">Web<span class="header-web">Studio</span></a>
                         <ul class="header-navigation-list">
                             <li><a href="index.html" class="header-nav-item header-active">Студия</a></li>
                             <li><a href="portfolio.html" class="header-nav-item">Портфолио</a></li>
@@ -25,10 +25,10 @@
                     <ul class="header-contacts-list">
                         <li class="header-contact-li">
                             <a href="mailto:info@devstudio.com" class="header-contacts-item"><svg class="header-mail-icon">
-                                <use href="images/icons.svg#icon-header-mail"></use>
+                                <use href="images/icons.svg#icon-envelope"></use>
                             </svg>info@devstudio.com</a></li>
                         <li class="header-contact-li"><a href="tel:+380961111111" class="header-contacts-item"><svg class="header-phone-icon">
-                            <use href="images/icons.svg#icon-headerphone"></use>
+                            <use href="images/icons.svg#icon-smartphone"></use>
                         </svg>+38 096 111 11 11</a></li>
                     </ul>
             </div>
@@ -216,22 +216,22 @@
             <h2 class="clients-head">Постоянные клиенты</h2>
                 <ul class="clients-list">
                     <li class="clients-item">
-                        <a href="" class="clients-sending"><svg class="clients-icon"><use href="images/icons.svg#icon-Union"></use></svg></a>
+                        <a href="" class="clients-sending"><svg class="clients-icon"><use href="images/icons.svg#icon-client1"></use></svg></a>
                     </li>
                     <li class="clients-item">
-                        <a href="" class="clients-sending"><svg class="clients-icon"><use href="images/icons.svg#icon-tagline"></use></svg></a>
+                        <a href="" class="clients-sending"><svg class="clients-icon"><use href="images/icons.svg#icon-client2"></use></svg></a>
                     </li>
                     <li class="clients-item">
-                        <a href="" class="clients-sending"><svg class="clients-icon"><use href="images/icons.svg#icon-conpany"></use></svg></a>
+                        <a href="" class="clients-sending"><svg class="clients-icon"><use href="images/icons.svg#icon-client3"></use></svg></a>
                     </li>
                     <li class="clients-item">
-                        <a href="" class="clients-sending"><svg class="clients-icon"><use href="images/icons.svg#icon-fosterpeters"></use></svg></a>
+                        <a href="" class="clients-sending"><svg class="clients-icon"><use href="images/icons.svg#icon-client4"></use></svg></a>
                     </li>
                     <li class="clients-item">
-                        <a href="" class="clients-sending"><svg class="clients-icon"><use href="images/icons.svg#icon-brand"></use></svg></a>
+                        <a href="" class="clients-sending"><svg class="clients-icon"><use href="images/icons.svg#icon-client5"></use></svg></a>
                     </li>
                     <li class="clients-item last">
-                        <a href="" class="clients-sending"><svg class="clients-icon"><use href="images/icons.svg#icon-tag_line"></use></svg></a>
+                        <a href="" class="clients-sending"><svg class="clients-icon"><use href="images/icons.svg#icon-client6"></use></svg></a>
                     </li>
                 </ul>
             </div>
